; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/codecs/extr_cx2072x.c_cx2072x_reg_write.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/codecs/extr_cx2072x.c_cx2072x_reg_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CX2072X_UM_INTERRUPT_CRTL_E = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, i32)* @cx2072x_reg_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cx2072x_reg_write(i8* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %9 = load i32, i32* %5, align 4
  %10 = call i32 @cx2072x_register_size(i32 %9)
  store i32 %10, i32* %8, align 4
  %11 = load i32, i32* %5, align 4
  %12 = load i32, i32* @CX2072X_UM_INTERRUPT_CRTL_E, align 4
  %13 = icmp eq i32 %11, %12
  br i1 %13, label %14, label %19

14:                                               ; preds = %3
  %15 = load i32, i32* %5, align 4
  %16 = add i32 %15, 3
  store i32 %16, i32* %5, align 4
  store i32 1, i32* %8, align 4
  %17 = load i32, i32* %6, align 4
  %18 = lshr i32 %17, 24
  store i32 %18, i32* %6, align 4
  br label %19

19:                                               ; preds = %14, %3
  %20 = load i32, i32* %6, align 4
  %21 = call i32 @cpu_to_le32(i32 %20)
  store i32 %21, i32* %7, align 4
  %22 = load i8*, i8** %4, align 8
  %23 = load i32, i32* %5, align 4
  %24 = load i32, i32* %8, align 4
  %25 = call i32 @cx2072x_reg_raw_write(i8* %22, i32 %23, i32* %7, i32 %24)
  ret i32 %25
}

declare dso_local i32 @cx2072x_register_size(i32) #1

declare dso_local i32 @cpu_to_le32(i32) #1

declare dso_local i32 @cx2072x_reg_raw_write(i8*, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
